WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
113706
REGRESSION(
r142152
): Text wraps in menu
https://bugs.webkit.org/show_bug.cgi?id=113706
Summary
REGRESSION(r142152): Text wraps in menu
Julien Chaffraix
Reported
2013-04-01 09:34:42 PDT
How to reproduce: 1. Open
http://www.tpri.com/MenuTest/menu.html
2. See that the live output (bottom menu) doesn't match the reference rendering (top menu) This is a confirmed regression from
http://trac.webkit.org/changeset/142152
as rolling it out locally removes the issue. I didn't dig into the exact issue so the title is intentionally vague.
Attachments
Patch
(6.05 KB, patch)
2013-04-03 13:00 PDT
,
Robert Hogan
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from gce-cr-linux-07 for chromium-linux-x86_64
(628.28 KB, application/zip)
2013-04-03 14:31 PDT
,
WebKit Review Bot
no flags
Details
Patch
(6.29 KB, patch)
2013-04-03 14:37 PDT
,
Robert Hogan
no flags
Details
Formatted Diff
Diff
Patch
(6.27 KB, patch)
2013-04-04 23:33 PDT
,
Robert Hogan
no flags
Details
Formatted Diff
Diff
Patch
(6.28 KB, patch)
2013-04-06 04:27 PDT
,
Robert Hogan
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-15 for mac-mountainlion-wk2
(624.65 KB, application/zip)
2013-04-06 08:34 PDT
,
Build Bot
no flags
Details
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Robert Hogan
Comment 1
2013-04-03 13:00:58 PDT
Created
attachment 196402
[details]
Patch
WebKit Review Bot
Comment 2
2013-04-03 14:31:55 PDT
Comment on
attachment 196402
[details]
Patch
Attachment 196402
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://webkit-commit-queue.appspot.com/results/17388210
New failing tests: fast/inline/inline-with-empty-inline-children.html
WebKit Review Bot
Comment 3
2013-04-03 14:31:58 PDT
Created
attachment 196411
[details]
Archive of layout-test-results from gce-cr-linux-07 for chromium-linux-x86_64 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: gce-cr-linux-07 Port: chromium-linux-x86_64 Platform: Linux-3.3.8-gcg-201212281604-x86_64-with-GCEL-10.04-gcel_10.04
Robert Hogan
Comment 4
2013-04-03 14:37:59 PDT
Created
attachment 196412
[details]
Patch
Dave Hyatt
Comment 5
2013-04-04 10:29:20 PDT
Comment on
attachment 196412
[details]
Patch r=me
WebKit Review Bot
Comment 6
2013-04-04 12:22:09 PDT
Comment on
attachment 196412
[details]
Patch Rejecting
attachment 196412
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=webkit-commit-queue.appspot.com', '--bot-id=gce-cq-01', 'apply-attachment', '--no-update', '--non-interactive', 196412, '--port=chromium-xvfb']" exit_code: 2 cwd: /mnt/git/webkit-commit-queue Last 500 characters of output: out of 2 hunks FAILED -- saving rejects to file LayoutTests/fast/inline/inline-with-empty-inline-children-expected.txt.rej patching file LayoutTests/fast/inline/inline-with-empty-inline-children.html Hunk #1 FAILED at 4. 1 out of 1 hunk FAILED -- saving rejects to file LayoutTests/fast/inline/inline-with-empty-inline-children.html.rej Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', '--force', '--reviewer', 'David Hyatt']" exit_code: 1 cwd: /mnt/git/webkit-commit-queue Full output:
http://webkit-commit-queue.appspot.com/results/17493085
WebKit Review Bot
Comment 7
2013-04-04 12:27:19 PDT
Comment on
attachment 196412
[details]
Patch Clearing flags on attachment: 196412 Committed
r147662
: <
http://trac.webkit.org/changeset/147662
>
WebKit Review Bot
Comment 8
2013-04-04 12:27:24 PDT
All reviewed patches have been landed. Closing bug.
Benjamin Poulain
Comment 9
2013-04-04 13:13:20 PDT
This broke: fast/regions/fixed-pos-elem-in-region.html Can you please have a look?
WebKit Review Bot
Comment 10
2013-04-04 13:37:49 PDT
Re-opened since this is blocked by
bug 113955
Robert Hogan
Comment 11
2013-04-04 23:33:13 PDT
Created
attachment 196583
[details]
Patch
Robert Hogan
Comment 12
2013-04-04 23:33:54 PDT
(In reply to
comment #9
)
> This broke: fast/regions/fixed-pos-elem-in-region.html > > Can you please have a look?
This passes for me locally using both chromium-linux and Qt builds. I strongly suspect temporary flakiness on the bots was to blame.
Benjamin Poulain
Comment 13
2013-04-05 01:40:24 PDT
> This passes for me locally using both chromium-linux and Qt builds. I strongly suspect temporary flakiness on the bots was to blame.
That was not a flaky test. It failed at least twice on the WebKit2 bots.
Robert Hogan
Comment 14
2013-04-06 04:23:25 PDT
(In reply to
comment #13
)
> > This passes for me locally using both chromium-linux and Qt builds. I strongly suspect temporary flakiness on the bots was to blame. > > That was not a flaky test. It failed at least twice on the WebKit2 bots.
The Mac-WK2 EWS runs reference tests and is green on this patch so I'm going to reland it..
Robert Hogan
Comment 15
2013-04-06 04:27:33 PDT
Created
attachment 196730
[details]
Patch
Build Bot
Comment 16
2013-04-06 08:33:59 PDT
Comment on
attachment 196730
[details]
Patch
Attachment 196730
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-commit-queue.appspot.com/results/17524433
New failing tests: platform/mac-wk2/plugins/npp-setwindow-called-on-scroll.html
Build Bot
Comment 17
2013-04-06 08:34:01 PDT
Created
attachment 196737
[details]
Archive of layout-test-results from webkit-ews-15 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-15 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.2
WebKit Commit Bot
Comment 18
2013-04-06 12:47:16 PDT
Comment on
attachment 196730
[details]
Patch Clearing flags on attachment: 196730 Committed
r147850
: <
http://trac.webkit.org/changeset/147850
>
WebKit Commit Bot
Comment 19
2013-04-06 12:47:21 PDT
All reviewed patches have been landed. Closing bug.
Robert Hogan
Comment 20
2013-04-08 11:37:07 PDT
Reverted
r147850
for reason: Changeset crossed paths with 147505, which is the same fix. Committed
r147939
: <
http://trac.webkit.org/changeset/147939
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug