REGRESSION(r142152): Text wraps in menu https://bugs.webkit.org/show_bug.cgi?id=113706

Reviewed by David Hyatt.

Source/WebCore:

* rendering/RenderBlockLineLayout.cpp:
(WebCore::inlineLogicalWidth): Empty inline elements add their inline border/padding/margin to the width of the
line when we iterate through them in nextLineBreak(), so no need to add them again here when climbing back up
from their first child looking for border/padding/margin to add. (An empty inline element can have floating children.)

LayoutTests:

* fast/inline/inline-with-empty-inline-children-expected.txt:
* fast/inline/inline-with-empty-inline-children.html:


Canonical link: https://commits.webkit.org/132479@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147850 268f45cc-cd09-0410-ab3c-d52691b4dbfc